# kanoa-mlops

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  Makefile  README.md  agents.md  benchmark_results.json  benchmark_runs.txt  benchmark_statistics_molmo.json  docker-compose.monitoring.yml  environment-gcp.yml  environment.yml  pyproject.toml  requirements-dev.txt  requirements-local.txt.template  requirements.txt
.agent/workflows/: serve.md  test-vllm.md
.github/: copilot-instructions.md
.github/workflows/: pre-commit.yml
docker/ollama/: README.md  docker-compose.ollama.yml
docker/ollama/exporter/: exporter.py
docker/vllm/: Dockerfile.molmo  README.md  docker-compose.gemma.yml  docker-compose.olmo3.yml  docker-compose.yml
docs/: README.md  adding-models.md  quickstart-pip.md
docs/analysis/: 20251201-gcp-gpu-integration.md  20251208-finetuning-vs-rag.md  20251208-jetson-thor-analysis.md  20251208-jetson-thor-model-survey.md  20251208-jetson-thor-molmo-performance.md  20251220-nemotron-3-nano-30b-edge-analysis.md
docs/planning/: GCP_GPU_Integration.md  Infrastructure_Spec.md  Local_Inference_Compatibility.md  benchmark_plan_jetson_thor.md  local-ai-coding-testing-plan.md  roadmap.md
docs/results/: 20251212-gemma-3-12b-jetson-thor.md  20251212-molmo-7b-jetson-thor.md  20260106-gemma-3-12b-mac-studio-m4max.md  20260106-gemma-3-4b-mac-studio-m4max.md  README.md
docs/source/: conf.py  contributing.md  egpu-setup-guide.md  gcp-setup-guide.md  gpu-monitoring.md  index.rst  model-support.md  performance-analysis.md  quickstart.md  wsl2-gpu-setup.md
docs/source/developer_guide/: adding-models.md  contributing.md  local-ai-coding-architecture.md  model-support.md  quickstart-pip.md  upgrading-from-source.md
docs/source/user_guide/: agent-platform.md  gpu-monitoring.md  local-ai-coding-setup.md  local-gpu-setup.md  model-troubleshooting.md  quickstart.md
examples/: README.md  demo-gemma-3-12b-egpu.ipynb  demo-molmo-7b-egpu.ipynb  llm-local-models.yaml  quickstart-gemma3-gcp.ipynb  quickstart-gemma3.py  quickstart-molmo-gcp.ipynb  quickstart-molmo.py
infrastructure/gcp/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infrastructure/gcp/presets/: README.md  gemma3-12b.tfvars  gemma3-27b.tfvars  gemma3-4b.tfvars  llama3-8b.tfvars  molmo-7b.tfvars
infrastructure/gcp/scripts/: startup.sh
kanoa_mlops/: __init__.py  arch_detect.py  config.py  gpu_detect.py  plugin.py
kanoa_mlops/templates/: README.md
kanoa_mlops/templates/docker/: README.md
kanoa_mlops/templates/docker/monitoring/: docker-compose.yml
kanoa_mlops/templates/docker/ollama/: docker-compose.ollama.yml
kanoa_mlops/templates/docker/ollama/exporter/: Dockerfile  exporter.py
kanoa_mlops/templates/docker/openhands/: docker-compose.yml.j2
kanoa_mlops/templates/docker/vllm/: Dockerfile.molmo  docker-compose.gemma.yml  docker-compose.gemma3.yml  docker-compose.gemma3.yml.j2  docker-compose.llama-scout.yml.j2  docker-compose.mixtral.yml.j2  docker-compose.molmo.yml  docker-compose.molmo.yml.j2  docker-compose.nemotron3-nano.yml.j2  docker-compose.olmo.yml  docker-compose.olmo3.yml  docker-compose.olmo3.yml.j2
monitoring/: .gitignore  README.md
monitoring/grafana/dashboards/: vllm-gpu-metrics-enhanced.json  vllm-gpu-metrics.json
monitoring/grafana/provisioning/dashboards/: dashboard-provider.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
monitoring/prometheus/: prometheus.yml
scripts/: download-models.sh
tests/integration/: README.md  benchmark_results.json  benchmark_statistics.json  benchmark_statistics_gemma3.json  benchmark_statistics_molmo.json  run_benchmark_suite.py  run_benchmark_suite_gemma3.py  run_benchmark_suite_molmo.py  run_benchmark_suite_ollama.py  test_ollama_gemma3.py  test_olmo3_specific.py  test_text_comparison.py  test_vision_comparison.py  test_vllm_gemma3_api.py  test_vllm_gemma3_specific.py  test_vllm_molmo_api.py  test_vllm_molmo_specific.py  test_vllm_olmo3_api.py  test_vllm_olmo3_specific.py  test_vllm_text_comparison.py  test_vllm_vision_comparison.py
tests/unit/: test_plugin.py
