[project]
name = "kanoa-mlops"
version = "0.1.0"
description = "Infrastructure for kanoa local AI interpretation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

# Base dependencies - minimal for local users
dependencies = [
    "rich>=13.0.0",           # CLI output formatting
    "toml>=0.10.0",           # Config file parsing
    "huggingface-hub>=0.20.0", # Model downloads
]

# Optional dependency groups
[project.optional-dependencies]
gcp = [
    "google-cloud-storage>=2.14.0",
    "google-cloud-aiplatform>=1.40.0",
    "google-cloud-discoveryengine>=0.11.0",
    "google-genai>=0.3.0",
]
dev = [
    "ruff>=0.14.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "pytest>=7.0.0",
    "nvitop>=1.3.0",
    "gpustat>=1.1.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]
all = [
    "kanoa-mlops[gcp,dev]",
]

[tool.setuptools]
packages = ["kanoa_mlops"]
include-package-data = true

[tool.setuptools.package-data]
kanoa_mlops = ["templates/**/*"]

# Plugin Registration
[project.entry-points."kanoa.cli.commands"]
mlops = "kanoa_mlops.plugin:register"

# =============================================================================
# Ruff - Linting and formatting
# =============================================================================
[tool.ruff]
line-length = 88
target-version = "py311"

# Fix violations automatically where possible
fix = true

# Exclude common non-source directories
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # Ruff-specific rules
    "RUF",
]

ignore = [
    # Line too long - formatter handles this
    "E501",
]

[tool.ruff.lint.per-file-ignores]
# Examples/notebooks can be more relaxed
# SIM112: Terraform env vars must be lowercase (TF_VAR_xxx convention)
"examples/**" = ["E722", "T201", "F841", "SIM112"]

[tool.ruff.lint.isort]
known-first-party = ["kanoa"]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# =============================================================================
# Mypy - Type checking (minimal for infra repo)
# =============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# =============================================================================
# Pytest
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
